--- a/index.html
+++ b/index.html
@@ -132,6 +132,94 @@
         </div>
       </div>
     </section>
+    <section class="mt-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-6">
+            <img src="images/img2.jpg" class="img-fluid" alt="">
+          </div>
+          <div class="col-lg-6 d-flex justify-content-center align-items-center">
+            <div>
+              <h3>CARE OF HEART</h3>
+            <p>For nearly 25 years, thousands of medical practitioners throughout the state of Utah have exclusively referred patients to Medicine Center Compounding Pharmacyfor their compounded medications. This is due to the combination of outstanding service, price, and quality. At Medicine Center, quality is paramount. For that reason, we use cutting edge technology, state-of-the-art equipment, innovative bases and some of the most unique dosage forms our industry has to offer</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="mt-5 bg-dark bg-opacity-10 p-5">
+      <h2 class="text-center mt-5">WE CARE</h2>
+      <p class="text-center">Sample text. Lorem ipsum dolor sit amet, consectetur adipiscing elit nullam nunc justo sagittis suscipit ultrices.</p>
+      <div class="container">
+        <div class="row row-cols-1 row-cols-md-3 g-4 mt-5">
+          <div class="col">
+            <div class="card">
+              <img src="images/img5.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">BIRTH CARE</h5>
+                <p class="card-text">Sample text. Lorem ipsum dolor sit amet, consectetur adipiscing elit nullam nunc justo sagittis suscipit ultrices.</p>
+                <a href="">READ MORE</a>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card">
+              <img src="images/img3.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">DENTAL CARE</h5>
+                <p class="card-text">Sample text. Lorem ipsum dolor sit amet, consectetur adipiscing elit nullam nunc justo sagittis suscipit ultrices.</p>
+                <a href="">READ MORE</a>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card">
+              <img src="images/img5.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">CHILD CARE</h5>
+                <p class="card-text">Sample text. Lorem ipsum dolor sit amet, consectetur adipiscing elit nullam nunc justo sagittis suscipit ultrices.</p>
+                <a href="">READ MORE</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="mt-5">
+      <h1 class="text-center">OUR SPECIALISTS</h1>
+      <p class="text-center">Sample text. Lorem ipsum dolor sit amet, consectetur adipiscing elit nullam nunc justo sagittis suscipit ultrices.</p>
+      <div class="container">
+        <div class="row row-cols-1 row-cols-md-3 g-4 mt-5">
+          <div class="col">
+            <div class="card h-100 border-0 bg-dark bg-opacity-60">
+              <img src="images/img9.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title text-center text-light">Dr. Ava Addams</h5>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card h-100 border-0 bg-dark bg-opacity-60">
+              <img src="images/img7.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title text-center text-light">Dr. DX</h5>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card h-100 border-0 bg-dark bg-opacity-60">
+              <img src="images/img9.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title text-center text-light">Dr. Kelly Madison</h5>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="mt-5 bg-dark p-5">
+      
+    </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
   </body>
 </html>
